--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1>Mr Roy World!</h1>
-    
+    <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1><span class="name-color">Mr Roy</span> world!</h1>
+
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a href="https://www.linkedin.com/in/pintu-roy-623ab614a/">Hireme</a>
+        </div>
+        <div>
+            <img src="image/profile pic.png" alt="Mr roy Profilepic">
+        </div>
+    </section>
 </body>
 </html>
