--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
             <img src="image/profile pic.png" alt="Mr roy Profilepic">
         </div>
     </section>
+
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="image/dream pic.png" alt="dream picture">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p class="text">I already learned the basic HTML and CSS. I can build any simple website. I can even teach
+                my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-bottom" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
